--- a/example/example_ipynb/cifar_10_advAUC.ipynb
+++ b/example/example_ipynb/cifar_10_advAUC.ipynb
@@ -21,16 +21,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "995124fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from easydict import EasyDict as edict\n",
+    "\n",
+    "from torchvision import transforms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49e0e1da",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import random\n",
     "import numpy as np\n",
+    "\n",
     "from XCurve.AUROC.dataloaders import StratifiedSampler # for imbalanced dataset sampling\n",
-    "from XCurve.AUROC.dataloaders import IMBALANCECIFAR10 # dataloader of Xcurve\n",
+    "from XCurve.AUROC.dataloaders import IMBALANCECIFAR10, get_data_loaders # dataloader of Xcurve\n",
     "from XCurve.AUROC.losses import AdvAUROCLoss, PGDAdversary\n",
-    "from XCurve.AUROC.optimizer import AdvAUCOptimizer # RegAdvAUCOptimizer\n",
+    "from XCurve.AUROC.optimizer import AdvAUCOptimizer\n",
     "from XCurve.AUROC.models import generate_net # create model or you can adopt any DNN models by Pytorch"
    ]
   },
@@ -95,6 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3bc632bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,6 +123,7 @@
     "# Or you can adopt any DNN models by Pytorch\n",
     "model = generate_net(args).cuda() # generate pytorch model \n",
     "\n",
+    "p_hat = 0.1\n",
     "criterion = AdvAUROCLoss(imratio=p_hat)\n",
     "optimizer = AdvAUCOptimizer(model.parameters(), \n",
     "                            criterion.a, criterion.b, criterion.alpha,\n",
@@ -155,40 +171,53 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bf17c189",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loss: 0.15990693867206573\n",
-      "loss: 0.2334757000207901\n",
-      "loss: 0.30239760875701904\n",
-      "loss: 0.1381421536207199\n",
-      "loss: 0.13158641755580902\n",
-      "loss: 0.38331863284111023\n",
-      "loss: 0.08875473588705063\n",
-      "loss: 0.20242173969745636\n",
-      "loss: 0.32185712456703186\n",
-      "loss: 0.15229110419750214\n",
-      "loss: 0.11186783015727997\n",
-      "loss: 0.11620910465717316\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "trainset, valset, testset = ..., ..., ... # Get your dataset\n",
+    "transform_train = transforms.Compose([\n",
+    "        transforms.RandomCrop(32, padding=4),\n",
+    "        transforms.ToTensor(),\n",
+    "    ])\n",
+    "transform_test = transforms.Compose([\n",
+    "    transforms.ToTensor(),\n",
+    "])\n",
     "\n",
-    "sampler = StratifiedSampler(train_set.get_labels(),\n",
-    "                                train_batch_size,\n",
-    "                                rpos = 1,\n",
-    "                                rneg = 10)\n",
+    "trainset = IMBALANCECIFAR10(root='dataset',\n",
+    "                                 train=True,\n",
+    "                                 download=True,\n",
+    "                                 transform=transform_train)\n",
+    "testset = IMBALANCECIFAR10(root='dataset',\n",
+    "                                train=False,\n",
+    "                                transform=transform_test)\n",
     "\n",
+    "sampler = StratifiedSampler(trainset.targets,\n",
+    "                            batch_size = 32,\n",
+    "                            rpos = 1,\n",
+    "                            rneg = 10)\n",
+    "\n",
+    "train_loader = torch.utils.data.DataLoader(\n",
+    "        trainset,\n",
+    "        batch_size=sampler.real_batch_size,\n",
+    "        shuffle=(sampler is None),\n",
+    "        num_workers=0,\n",
+    "        pin_memory=True,\n",
+    "        sampler=sampler,\n",
+    "        drop_last=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6d3162b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# forward of model for one epoch\n",
     "model.train()\n",
     "lower_limit, upper_limit = 0.0, 1.0\n",
     "\n",
-    "for index, (X, y) in enumerate(trainloader):\n",
+    "for index, (X, y) in enumerate(train_loader):\n",
     "    X, y  = X.cuda(), y.cuda()\n",
     "    # target.shape => [batch_size, ]\n",
     "    # Note that we ask for the prediction of the model among [0,1] \n",
@@ -204,13 +233,24 @@
     "    pred = torch.sigmoid(robust_output) # [batch_size, num_classess] when num_classes > 2, o.w. output [batch_size, ] \n",
     "    robust_loss = criterion(pred, y)\n",
     "    if index % 30 == 0:\n",
-    "        print(\"loss:\", loss.item())\n",
+    "        print(\"loss:\", robust_loss.item())\n",
     "    \n",
     "    # backward\n",
     "    optimizer.zero_grad()\n",
-    "    loss.backward()\n",
+    "    robust_loss.backward()\n",
+    "    \n",
+    "    # If U use RegAdvAUROCLoss, firstly U should use `optimizer.record_grad()`, then use `optimizer.step()` !!!!\n",
+    "    # optimizer.record_grad()\n",
     "    optimizer.step()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18dd8a43",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -229,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
