--- a/example/example_ipynb/Metrics_for_AUROC.ipynb
+++ b/example/example_ipynb/Metrics_for_AUROC.ipynb
@@ -62,9 +62,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5576\n",
+      "0.43600000000000005\n",
+      "0.43600000000000005\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/zhiguang/anaconda3/envs/lzgtorch1.8.2/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from XCurve.Metrics import AUROC\n",
     "import numpy as np \n",
@@ -124,9 +142,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.2816\n"
+     ]
+    }
+   ],
    "source": [
     "from XCurve.Metrics import PartialAUROC\n",
     "import numpy as np \n",
@@ -138,6 +164,13 @@
     "binary_auc=PartialAUROC(y_true=y_true, y_pred=y_pred, min_tpr=1, max_fpr=0.5)\n",
     "print(binary_auc)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -156,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
