--- a/example/example_ipynb/cifar_10_minmax.ipynb
+++ b/example/example_ipynb/cifar_10_minmax.ipynb
@@ -2,52 +2,90 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "1e7ae1f6",
    "metadata": {},
    "source": [
-    "## XCurve Library\n",
+    "## XCurve.AUROC.optimizer.SGD4MinMaxPAUC\n",
     "\n",
-    "This code imports several libraries and modules.\n",
+    "This chapter will introduce how to use MinMax optimizer from `XCurve.AUROC.optimizer` on binary long-tail CIFAR-10 dataset.\n",
     "\n",
-    "### Import optimizer, loss function, dataset, and dataloader.\n",
+    "### Step1: Import optimizer, loss function, dataset, and dataloader.\n",
     "\n",
     "#### Importing Torch and EasyDict\n",
     "1. The `torch` module is imported, which is the primary library used for building and training deep learning models in PyTorch.\n",
-    "2. The `EasyDict` class from the `easydict` module is imported and renamed as `edict`. This is a convenience class that allows dictionary keys to be accessed as attributes.\n",
-    "\n",
-    "#### Importing AUROC Losses\n",
-    "1. The `get_losses` function is imported from the `XCurve.AUROC.losses` module.\n",
-    "2. This function returns a dictionary of pre-defined PyTorch loss functions that are commonly used to optimize the AUROC metric.\n",
-    "3. The available loss functions include `BCEWithLogitsLoss`, `FocalLoss`, and `SquareAUCLoss`, among others.\n",
-    "\n",
-    "#### Importing Optimizer\n",
-    "1. The `SGD4MinMaxPAUC` optimizer is imported from the `XCurve.AUROC.optimizer` module.\n",
-    "2. This optimizer is specifically designed for optimizing the MinMaxPAUC metric, which is a modified version of the AUROC metric that is better suited for imbalanced datasets.\n",
-    "3. The `SGD` optimizer can also be used instead of `SGD4MinMaxPAUC`, or any other optimizer supported by PyTorch.\n",
-    "\n",
-    "Overall, this code block imports necessary PyTorch and XCurve.AUROC modules for a neural network implementation. The `torch` module is a fundamental library for building and training deep learning models. The `EasyDict` class from the `easydict` module is used to simplify dictionary access by allowing keys to be accessed as attributes. The `get_losses` function from the `XCurve.AUROC.losses` module provides a convenient way to import pre-defined loss functions that are commonly used to optimize the AUROC metric. The `SGD4MinMaxPAUC` optimizer from the `XCurve.AUROC.optimizer` module is a specialized optimizer designed for optimizing the MinMaxPAUC metric, which is a modified version of the AUROC metric that is more suitable for imbalanced datasets. By using these imported modules, the user can easily fine-tune their neural network implementation to achieve optimal performance for their specific task."
+    "2. The `EasyDict` class from the `easydict` module is imported and renamed as `edict`. This is a convenience class that allows dictionary keys to be accessed as attributes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "id": "a2e925cc",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
-    "from easydict import EasyDict as edict\n",
-    "\n",
+    "from easydict import EasyDict as edict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77924730",
+   "metadata": {},
+   "source": [
+    "#### Importing AUROC Losses\n",
+    "1. The `get_losses` function is imported from the `XCurve.AUROC.losses` module.\n",
+    "2. This function returns a dictionary of pre-defined PyTorch loss functions that are commonly used to optimize the AUROC metric.\n",
+    "3. The available loss functions include `SquareAUCLoss`, `RelaxedPAUCLoss`, and `AdvAUROCLoss`, among others."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ce5f65b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# import loss of AUROC\n",
-    "from XCurve.AUROC.losses import get_losses\n",
+    "from XCurve.AUROC.losses import get_losses"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ff4d9c8",
+   "metadata": {},
+   "source": [
     "\n",
+    "#### Importing Optimizer\n",
+    "1. The `SGD4MinMaxPAUC` optimizer is imported from the `XCurve.AUROC.optimizer` module.\n",
+    "2. This optimizer is specifically designed for optimizing the MinMaxPAUC metric, which is a modified version of the AUROC metric that is better suited for imbalanced datasets.\n",
+    "3. The `SGD` optimizer can also be used instead of `SGD4MinMaxPAUC`, or any other optimizer supported by PyTorch."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "92bcc5ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# import optimier (or one can use any optimizer supported by PyTorch)\n",
     "from XCurve.AUROC.optimizer import SGD4MinMaxPAUC"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "9e49a272",
    "metadata": {},
    "source": [
-    "### Set up the parameters, create the model.\n",
+    "\n",
+    "Overall, this code block imports necessary PyTorch and XCurve.AUROC modules for a neural network implementation. The `torch` module is a fundamental library for building and training deep learning models. The `EasyDict` class from the `easydict` module is used to simplify dictionary access by allowing keys to be accessed as attributes. The `get_losses` function from the `XCurve.AUROC.losses` module provides a convenient way to import pre-defined loss functions that are commonly used to optimize the AUROC metric. The `SGD4MinMaxPAUC` optimizer from the `XCurve.AUROC.optimizer` module is a specialized optimizer designed for optimizing the MinMaxPAUC metric, which is a modified version of the AUROC metric that is more suitable for imbalanced datasets. By using these imported modules, the user can easily fine-tune their neural network implementation to achieve optimal performance for their specific task."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step2: Set up the parameters, create the model.\n",
     "\n",
     "In the provided code, a deep learning model is created using the `generate_net` function from the `XCurve.AUROC.models` module. This function generates a neural network model of a specified type (e.g., resnet18, resnet20, densenet121, or mlp).\n",
     "\n",
@@ -66,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load optimizer and loss function\n",
+    "### Step3: Load optimizer and loss function\n",
     "\n",
     "\n",
     "The provided code block defines the `num_classes` variable and an `args_training` object that contains various training-related parameters, including loss type, learning rate, and weight decay. It also initializes two tensors, `a` and `b`, with requires_grad set to True, and defines an optimizer using the `SGD4MinMaxPAUC` class and a loss criterion using the `get_losses` function.\n",
@@ -125,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +173,7 @@
     "    \"train_batch_size\": 32,\n",
     "    \"test_batch_size\": 32,\n",
     "    \"num_workers\": 4,\n",
-    "    \"loss_type\": \"MinMaxPAUC\",\n",
+    "    \"loss_type\": \"InsRelaxedPAUCLoss\",\n",
     "    \"loss_params\": {\n",
     "        \"num_classes\": 2,\n",
     "        \"gamma\": 1.0,\n",
@@ -183,7 +221,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create Dataset (train_set, val_set, test_set) and dataloader (trainloader)\n",
+    "### Step4: Create Dataset (train_set, val_set, test_set) and dataloader (trainloader)\n",
     "\n",
     "In the provided code, the `dataset_args` dictionary contains various parameters used to configure the dataset. Some of the crucial parameters in the `dataset_args` dictionary are explained below:\n",
     "\n",
@@ -210,19 +248,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\feng\\Xcurve\\XCurve\\example\\data\\XCurve\\AUROC\\dataloaders\\sampler.py:75: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  self.data = self.data.append(neg_samples, ignore_index=False)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from XCurve.AUROC.dataloaders import get_datasets\n",
+    "from XCurve.AUROC.dataloaders import get_data_loaders\n",
+    "\n",
     "# set dataset params, see our doc. for more details.\n",
     "dataset_args = edict({\n",
     "    \"data_dir\": \"cifar-10-long-tail/\", # relative path of dataset\n",
@@ -254,14 +286,16 @@
     "    test_batch_size =64\n",
     ") # load dataloader\n",
     "# Note that, in the get_datasets(), we conduct stratified sampling for train_set  \n",
-    "# using the StratifiedSampler at from XCurve.AUROC.dataloaders import StratifiedSampler"
+    "# using the StratifiedSampler at from XCurve.AUROC.dataloaders import StratifiedSampler\n",
+    "# FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+    "# self.data = self.data.append(neg_samples, ignore_index=False)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Train the model\n",
+    "### Step5: Train the model\n",
     "\n",
     "The provided code block delineates the forward pass of a neural network model for one epoch.\n",
     "\n",
@@ -286,25 +320,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss: 0.15990693867206573\n",
-      "loss: 0.2334757000207901\n",
-      "loss: 0.30239760875701904\n",
-      "loss: 0.1381421536207199\n",
-      "loss: 0.13158641755580902\n",
-      "loss: 0.38331863284111023\n",
-      "loss: 0.08875473588705063\n",
-      "loss: 0.20242173969745636\n",
-      "loss: 0.32185712456703186\n",
-      "loss: 0.15229110419750214\n",
-      "loss: 0.11186783015727997\n",
-      "loss: 0.11620910465717316\n"
+      "loss: 0.6694173216819763\n",
+      "loss: 0.5526548624038696\n",
+      "loss: 0.5034134984016418\n",
+      "loss: 0.4788232445716858\n",
+      "loss: 0.40037038922309875\n",
+      "loss: 0.3195042610168457\n",
+      "loss: 0.47740834951400757\n",
+      "loss: 0.40661725401878357\n",
+      "loss: 0.42501601576805115\n",
+      "loss: 0.34192323684692383\n",
+      "loss: 0.3645256757736206\n",
+      "loss: 0.36174753308296204\n"
      ]
     }
    ],
@@ -318,7 +352,7 @@
     "    \n",
     "    # forward\n",
     "    pred = torch.sigmoid(model(x)) # [batch_size, num_classess] when num_classes > 2, o.w. output [batch_size, ] \n",
-    "    loss = criterion(pred, target)\n",
+    "    loss = criterion(pred.squeeze(-1), target)\n",
     "    if index % 30 == 0:\n",
     "        print(\"loss:\", loss.item())\n",
     "    \n",
@@ -327,6 +361,14 @@
     "    loss.backward()\n",
     "    optimizer.step()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fefa4c61",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -345,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
