--- a/example/example_ipynb/cifar_10_auc.ipynb
+++ b/example/example_ipynb/cifar_10_auc.ipynb
@@ -1,157 +1,165 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "## XCurve.AUROC.losses.StandardAUROC\n",
+    "This chapter will introduce how to conduct AUROC-oriented training on binary long-tail CIFAR-10 dataset.\n",
+    "Note that, in the following, we take SquareAUCLoss as an example. The others (i.e., HingeAUCLoss and ExpAUCLoss) stay similar to this one."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "24beb67e",
    "metadata": {},
    "source": [
-    "## XCurve Library\n",
-    "\n",
-    "This code imports several libraries and modules.\n",
-    "\n",
-    "### Import optimizer, loss function, dataset, and dataloader.\n",
-    "\n",
-    "- Firstly, the `easydict` library is imported and aliased as `edict`. This library provides a simple way to create nested dictionaries and allows access to its keys as attributes.\n",
-    "\n",
-    "- Next, the `torch` library is imported, which is the main PyTorch package. Then, the `SGD` optimizer is imported from `torch.optim`. This optimizer is used to optimize the model parameters during training. **Alternatively, any other optimizer supported by PyTorch can also be used.**\n",
-    "\n",
-    "- Additionally, `SquareAUCLoss` is imported from `XCurve.AUROC.losses`. This loss function is used to compute the loss for the Area Under the Receiver Operating Characteristic Curve (AUROC).\n",
-    "\n",
-    "- Finally, the `get_datasets` and `get_data_loaders` functions are imported from `XCurve.AUROC.dataloaders`. These functions are used to obtain the Xcurve dataset and data loaders, respectively."
+    "## Step 1\n",
+    "To begin with, we should import some packages:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "id": "2c38a71d",
    "metadata": {},
    "outputs": [],
    "source": [
     "from easydict import EasyDict as edict\n",
     "import torch\n",
-    "from torch.optim import SGD # optimier (or one can use any optimizer supported by PyTorch)\n",
-    "from XCurve.AUROC.losses import SquareAUCLoss # loss of AUROC\n",
+    "import random\n",
+    "import numpy as np\n",
+    "\n",
     "from XCurve.AUROC.dataloaders import get_datasets # dataset of Xcurve\n",
-    "from XCurve.AUROC.dataloaders import get_data_loaders # dataloader of Xcurve"
+    "from XCurve.AUROC.dataloaders import get_data_loaders # dataloader of Xcurve\n",
+    "from XCurve.AUROC.losses import SquareAUCLoss # loss of AUROC\n",
+    "from torch.optim import SGD # optimier (or one can use any optimizer supported by PyTorch)\n",
+    "from XCurve.AUROC.models import generate_net # create model or you can adopt any DNN models by Pytorch"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
+   "id": "3230e6d1",
    "metadata": {},
    "source": [
-    "### Set up the parameters, create the model.\n",
-    "\n",
-    "In the provided code, a deep learning model is created using the `generate_net` function from the `XCurve.AUROC.models` module. This function generates a neural network model of a specified type (e.g., resnet18, resnet20, densenet121, or mlp).\n",
-    "\n",
-    "The `args` variable is an `edict`, which is a dictionary-like object that allows attribute-style access (e.g., `args.model_type` instead of `args['model_type']`). It contains the parameters for creating the model. Some of the essential parameters are explained below:\n",
-    "\n",
-    "- `model_type`: This parameter specifies the type of model to be generated. In this case, it is set to `\"resnet18\"`, which means that a ResNet-18 model will be generated.\n",
-    "\n",
-    "- `num_classes`: This parameter specifies the number of classes in the classification problem. In this case, it is set to `2`.\n",
-    "\n",
-    "- `pretrained`: This parameter specifies whether the model should be loaded with pre-trained weights. In this case, it is set to `None`, which means that the model will not be pre-trained.\n",
-    "\n",
-    "The `generate_net` function returns a PyTorch model object, stored in the `model` variable. The model is then moved to the GPU using the `cuda` method.\n",
-    "\n",
-    "It is worth noting that the `generate_net` function is part of the XCurve package, which is a Python package for computing the Area Under the Receiver Operating Characteristic Curve (AUROC) and other performance metrics for binary and multi-class classification problems."
+    "## Step 2\n",
+    "Set seed to ensure a reproducible experiment."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "id": "beb28104",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create model or you can adopt any DNN models by Pytorch\n",
-    "from XCurve.AUROC.models import generate_net\n",
+    "seed = 1024\n",
+    "random.seed(seed)\n",
+    "torch.manual_seed(seed)\n",
+    "torch.cuda.manual_seed(seed)\n",
+    "np.random.seed(seed)\n",
+    "torch.backends.cudnn.deterministic = True\n",
+    "torch.backends.cudnn.benchmark = False"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ddd611b9",
+   "metadata": {},
+   "source": [
+    "## Step 3\n",
+    "Formulate your model, criterion and optimizer\n",
     "\n",
+    "### Model\n",
+    "Our XCurve supports any pytorch-driven DNN model. In the XCurve, we implement ResNet-family backbone (18, 20, 35, etc.), Densenet121 and MLP.\n",
+    "> XCurve.AUROC.models.resnet18(num_classes=1, pretrained=None)\n",
+    "\n",
+    "### Criterion\n",
+    "To decouple the pairwisely interdependent AUC risk, we use an instance-wise reformulation strategy to obtain an end-to-end AUROC-oriented AT method.\n",
+    "> XCurve.AUROC.losses.SquareAUCLoss(self, num_classes, gamma=1, transform='ovo')\n",
+    "\n",
+    "> XCurve.AUROC.losses.HingeAUCLoss(self, num_classes, gamma=1, transform='ovo')\n",
+    "\n",
+    "> XCurve.AUROC.losses.ExpAUCLoss(self, num_classes, gamma=1, transform='ovo')\n",
+    "\n",
+    "#### Parameters\n",
+    "- num_classes (int): the number of classes in the classification problem. In this case, since we have two classes, num_classes is set to 2.\n",
+    "- gamma (float): the safe margin for the loss. If the distance between a sample and the decision boundary of its true class is less than gamma, the sample is considered correctly classified (Default [1.0]).\n",
+    "- transform (str): the manner of computing the multi-class AUROC Metric. In this case, it is set to \"ovo\", which stands for \"one-vs-one\". This means that all possible pairs of classes are compared, and the AUROC metric is computed for each pair separately. The final AUROC score is the average of all pairwise scores (Default ['ovo']).\n",
+    "\n",
+    "### Optimizer\n",
+    "The optimizer variable is created using the SGD optimizer from the torch.optim module.\n",
+    "\n",
+    "#### Parameters\n",
+    "- params: parameters in your pytorch model\n",
+    "- lr: the learning rate for the optimizer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "8f425afa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# set params to create model\n",
     "args = edict({\n",
-    "    \"model_type\": \"resnet18\", # (support resnet18,resnet20, densenet121 and mlp)\n",
+    "    \"model_type\": \"resnet18\", # (support resnet, densenet121 and mlp)\n",
     "    \"num_classes\": 2, # number of class\n",
     "    \"pretrained\": None # if the model is pretrained\n",
     "})\n",
-    "model = generate_net(args).cuda() # generate model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Load optimizer and loss function\n",
+    "# Or you can adopt any DNN models by Pytorch\n",
+    "model = generate_net(args).cuda() # generate pytorch model \n",
     "\n",
-    "In the provided code, the `num_classes` variable is set to `2`. This variable specifies the number of classes in the classification problem.\n",
-    "\n",
-    "The `optimizer` variable is created using the `SGD` optimizer from the `torch.optim` module. This optimizer is employed to update the model's parameters during training. The learning rate for the optimizer is set to `0.01`.\n",
-    "\n",
-    "The `criterion` variable is created using the `SquareAUCLoss` loss criterion. This criterion computes the loss during training. Some of the essential parameters for the `SquareAUCLoss` criterion are explained below:\n",
-    "\n",
-    "- `num_classes`: This parameter specifies the number of classes in the classification problem. In this case, since we have two classes, `num_classes` is set to `2`.\n",
-    "\n",
-    "- `gamma`: This parameter specifies the safe margin for the loss. If the distance between a sample and the decision boundary of its true class is less than `gamma`, the sample is considered correctly classified.\n",
-    "\n",
-    "- `transform`: This parameter specifies the manner of computing the multi-class AUROC Metric. In this case, it is set to `\"ovo\"`, which stands for \"one-vs-one\". This means that all possible pairs of classes are compared, and the AUROC metric is computed for each pair separately. The final AUROC score is the average of all pairwise scores.\n",
-    "\n",
-    "It is worth noting that the `SquareAUCLoss` criterion is a variant of the Area Under the Receiver Operating Characteristic Curve (AUROC) loss criterion typically employed in binary classification problems."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "num_classes = 2\n",
-    "optimizer = SGD(model.parameters(), lr=0.01) # create optimizer\n",
-    "\n",
     "criterion = SquareAUCLoss(\n",
     "    num_classes=num_classes, # number of classes\n",
     "    gamma=1.0, # safe margin\n",
     "    transform=\"ovo\" # the manner of computing the multi-classes AUROC Metric ('ovo' or 'ova').\n",
-    ") # create loss criterion"
+    ") # create loss criterion\n",
+    "optimizer = SGD(model.parameters(), lr=0.01) # create optimizer"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
+   "id": "07656272",
    "metadata": {},
    "source": [
-    "### Create Dataset (train_set, val_set, test_set) and dataloader (trainloader)\n",
+    "## Step 4\n",
+    "Now, we can start adversarial training!\n",
     "\n",
-    "In the provided code, the `dataset_args` dictionary contains various parameters used to configure the dataset. Some of the crucial parameters in the `dataset_args` dictionary are explained below:\n",
+    "### Dataset and DataLoaders\n",
+    "Before training, you should load your customized datasets and dataloaders. \n",
+    "The get_datasets() function is utilized to load the dataset and create train, validation, and test datasets. The get_data_loaders() function is then employed to create dataloaders for the train, validation, and test datasets.\n",
+    "> XCurve.AUROC.dataloaders.get_datasets(dataset_args)\n",
     "\n",
-    "- `data_dir`: This parameter specifies the relative path of the dataset. In this case, the dataset is stored in the `cifar-10-long-tail/` directory.\n",
+    "> XCurve.AUROC.dataloaders.get_data_loaders(train_set, val_set, test_set, train_batch_size， test_batch_size, num_workers=4, rpos = 1, rneg = 4)\n",
     "\n",
-    "- `input_size`: This parameter specifies the size of the input images in pixels. Here, the input images have a dimension of 32x32 pixels.\n",
+    "#### Parameters\n",
+    "In the provided code, the dataset_args dictionary contains various parameters used to configure the dataset. Some of the crucial parameters in the dataset_args dictionary are explained below:\n",
     "\n",
-    "- `norm_params`: This parameter contains the normalization parameters for the dataset. Specifically, it includes the mean and standard deviation values for the RGB channels of the images.\n",
-    "\n",
-    "- `use_lmdb`: This parameter specifies whether the dataset should be loaded as an LMDB database or not.\n",
-    "\n",
-    "- `sampler`: This parameter is only employed for binary classification and contains the sampling rate for positive and negative examples in the dataset.\n",
-    "\n",
-    "- `aug`: This parameter specifies whether data augmentation should be used during training or not.\n",
-    "\n",
-    "- `class2id`: This parameter is a dictionary mapping the class labels to their corresponding IDs. Here, the minority class has a label of `1` and all other classes have a label of `0`.\n",
-    "\n",
-    "The `get_datasets()` function is utilized to load the dataset and create train, validation, and test datasets. The `get_data_loaders()` function is then employed to create dataloaders for the train, validation, and test datasets.\n",
-    "\n",
-    "It is worth noting that the `get_datasets()` function utilizes stratified sampling for the train set. Specifically, it employs the `StratifiedSampler` from the `XCurve.AUROC.dataloaders` module to ensure that the number of samples from each class is balanced in the train set.\n",
-    "\n",
-    "For more information on the `StratifiedSampler`, please refer to the official PyTorch documentation [here](https://pytorch.org/docs/stable/data.html#torch.utils.data.StratifiedSampler)."
+    "- data_dir (str): the relative path of the dataset. \n",
+    "- input_size (list): the size of the input images in pixels.\n",
+    "- norm_params (EasyDict, list, float): the normalization parameters for the dataset. Specifically, it includes the mean and standard deviation values for the RGB channels of the images.\n",
+    "- use_lmdb (bool): whether the dataset should be loaded as an LMDB database or not.\n",
+    "- sampler (EasyDict, int): only employed for binary classification and contains the sampling rate for positive and negative examples in the dataset.\n",
+    "- aug (bool): whether data augmentation should be used during training or not.\n",
+    "- class2id (EasyDict, int): a dictionary mapping the class labels to their corresponding IDs. Here, the minority class has a label of 1 and all other classes have a label of 0."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "id": "4abb9255",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\feng\\Xcurve\\XCurve\\example\\data\\XCurve\\AUROC\\dataloaders\\sampler.py:75: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  self.data = self.data.append(neg_samples, ignore_index=False)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# set dataset params, see our doc. for more details.\n",
     "dataset_args = edict({\n",
@@ -169,6 +177,7 @@
     "        },\n",
     "    \"npy_style\": True,\n",
     "    \"aug\": True, \n",
+    "    \"num_classes\": num_classes,\n",
     "    \"class2id\": { # positive (minority) class idx\n",
     "        \"1\": 1, \"0\":0, \"2\":0, \"3\":0, \"4\":0, \"5\":0,\n",
     "        \"6\":0, \"7\":0, \"8\":0, \"9\":0\n",
@@ -188,7 +197,9 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
+   "id": "fd11ddb2",
    "metadata": {},
    "source": [
     "### Train the model\n",
@@ -196,19 +207,12 @@
     "The provided code block delineates the forward pass of a neural network model for one epoch.\n",
     "\n",
     "- In line 1, a `for` loop is employed to iterate over the training data loader (`trainloader`). The `enumerate` function is utilized to iterate over the data loader with an index. For each iteration of the loop, a batch of input (`x`) and target (`target`) tensors are extracted from the `trainloader` and transferred to the GPU using the `cuda()` method.\n",
-    "\n",
     "- In line 2, the shape of the `target` tensor is printed. This tensor has a shape of `[batch_size, ]`, where `batch_size` is the number of samples in the current batch. It is also noted that the model is anticipated to output predictions in the range of `[0, 1]` for binary (i.e., sigmoid) or multi-class (i.e., softmax) AUROC optimization.\n",
-    "\n",
     "- In line 3, the input tensor `x` is passed through the model using the `model` object. The output of the model is a tensor of shape `[batch_size, num_classes]` if `num_classes > 2`, or `[batch_size, ]` otherwise. This output tensor is passed through a sigmoid function using the `torch.sigmoid` method to obtain a probability distribution over the classes.\n",
-    "\n",
     "- In line 4, the binary cross-entropy loss is calculated between the predicted probabilities and the true targets using the `criterion` object.\n",
-    "\n",
     "- In line 5, the current loss value is displayed on the console if the current iteration index is a multiple of 30.\n",
-    "\n",
     "- In line 6, the gradients of the loss concerning the model parameters are computed using the `backward` method.\n",
-    "\n",
     "- In line 7, the optimizer's gradients are set to zero employing the `zero_grad` method.\n",
-    "\n",
     "- In line 8, the optimizer's step function is invoked using the `step` method to update the model parameters based on the computed gradients.\n",
     "\n",
     "It is worth noting that the backward pass and optimizer step functions are employed to update the model's parameters and enhance its performance during training."
@@ -216,25 +220,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss: 0.15990693867206573\n",
-      "loss: 0.2334757000207901\n",
-      "loss: 0.30239760875701904\n",
-      "loss: 0.1381421536207199\n",
-      "loss: 0.13158641755580902\n",
-      "loss: 0.38331863284111023\n",
-      "loss: 0.08875473588705063\n",
-      "loss: 0.20242173969745636\n",
-      "loss: 0.32185712456703186\n",
-      "loss: 0.15229110419750214\n",
-      "loss: 0.11186783015727997\n",
-      "loss: 0.11620910465717316\n"
+      "loss: 0.5013089179992676\n",
+      "loss: 0.28807708621025085\n",
+      "loss: 0.24725466966629028\n",
+      "loss: 0.22594276070594788\n",
+      "loss: 0.146153062582016\n",
+      "loss: 0.04596542567014694\n",
+      "loss: 0.32249999046325684\n",
+      "loss: 0.23927274346351624\n",
+      "loss: 0.17085659503936768\n",
+      "loss: 0.13147632777690887\n",
+      "loss: 0.3145654797554016\n",
+      "loss: 0.1467626988887787\n",
+      "loss: 0.04148177057504654\n"
      ]
     }
    ],
@@ -257,6 +262,14 @@
     "    loss.backward()\n",
     "    optimizer.step()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9139e2e8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -275,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
